# crystallized

./: .gitignore  CHANGELOG.md  README.md  README.ru.md  SECURITY.md  install.sh  uninstall.sh
.github/workflows/: ci.yml
.sisyphus/plans/: crystallized.md
auth/: extract_token.py
auth/tests/: test_extract_token.py
auth/tests/fixtures/: config-no-token.json
config/: opencode.json
docs/plans/: 2026-05-11-crystallized-v1.1-stabilization-design.md  2026-05-11-crystallized-v1.1-stabilization.md
memory/: .ruff.toml  memory-inject.py  own-voice.py  pyproject.toml  pyrightconfig.json  server.py
memory/tests/: conftest.py  test_config.py  test_decay.py  test_docs.py  test_facts.py  test_memory_inject.py  test_own_voice.py  test_semantic.py  test_smoke.py
templates/notes/journal/: README.md  _template.md
templates/notes/self/: beliefs.md  focus.md  observations.md
